assets/css/style.css
.container-lg {
  max-width: 1200px;
}
.container-md {
  max-width: 1200px;
}
.container {

}

@media (max-width: 575.9px) {
  .page-top {
    padding-top: 3.5rem;
  }
}
@media (max-width: 991.9px) {
  .container {
    /* min-width: 960px; */
    max-width: 100%;
    padding-left: 3%;
    padding-right: 3%;
  }
}
a, a:hover {
  color: inherit;
  text-decoration: none;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle,
.btn-primary.focus, .btn-primary:focus,
.btn-primary:hover,
.btn-primary {
  background: rgb(160, 0, 0);
  border-color: rgb(160, 0, 0);
}
.btn-blue:not(:disabled):not(.disabled).active, .btn-blue:not(:disabled):not(.disabled):active, .show>.btn-blue.dropdown-toggle,
.btn-blue.focus, .btn-blue:focus,
.btn-blue:hover,
.btn-blue {
  color: white;
  background: rgb(4, 0, 129);
  border-color: rgb(4, 0, 129);
}
.btn {
  padding: .15rem .75rem;
}
.btn-sm {
  font-size: .7rem;
  padding: .25rem .5rem;
}
@media (max-width: 575.9px) {
  .btn-sm {
    padding: .1rem .5rem;
  }
}
@media (min-width: 576px) {
  .btn-sm {
    font-size: 1.5vw;
  }
}
@media (min-width: 992px) {
  .btn-sm {
    font-size: .8rem;
  }
}
.mb-1-p {
  margin-bottom: 1%;
}
.mb-2-p {
  margin-bottom: 2%;
}
.mt-2-p {
  margin-top: 2%;
}
.mb-5-p {
  margin-bottom: 7.5%;
}
.mt-5-p {
  padding-top: 3vw;
}
.my-5-p {
  margin-top: 7.5%;
  margin-bottom: 7.5%;
}
@media (min-width: 1200px) {
  .mt-5-p {
    padding-top: 3rem;
  }
}
.mr-4-p {
  margin-right: 3%;
}
.ml-4-p {
  margin-left: 3%;
}
.p-5-p {
  padding: 5%;
}
.px-5-p {
  padding-left: 5%;
  padding-right: 5%;
}
.py-1-p {
  padding-top: .75%;
  padding-bottom: .75%;
}
.py-3-p {
  padding-top: 2%;
  padding-bottom: 2%;
}
.py-5-p {
  padding-top: 5%;
  padding-bottom: 5%;
}
@media (min-width: 576px) {  
  .py-5-p {
    padding-top: 2%;
    padding-bottom: 2%;
  }
}
.pl-2-p {
  padding-left: .25em;
}

.modal-content {
  margin: 0 auto;
  width: 95%;
}
.navbar-light .navbar-nav .nav-link,
.text-secondary {
  color: #4d4d4d !important;
}

#v-pills-tab {
  margin: 2% auto;
  width: 100%;
}
/* @media (min-width: 576px) {
  #v-pills-tab {
    width: 90%;
  }
} */

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  background-color: #fff;
}
.nav-pills .nav-link {
  background-color: #ddd;
  border-radius: 0;
  border-top: 0.5px solid #606060;
  border-left: 0.5px solid #606060;
  font-size: small;
  padding: .25rem 0 .25rem .5rem;
  text-align: center;
}

#v-pills-salon-tab {
  border-left: 0.5px solid #606060;
  border-right: 0.5px solid #606060;
}
#v-pills-4-tab,
#v-pills-7-tab,
#v-pills-9-tab {
  border-right: 0.5px solid #606060;
}
#v-pills-7-tab,
#v-pills-8-tab,
#v-pills-9-tab {
  border-bottom: 0.5px solid #606060;
}
.tab-content.schedule {
  margin-top: 3.5%;
}

.tab-content.schedule>.tab-pane {
  border-radius: .5rem;
  border: 0.5px solid #606060;
  box-sizing: border-box;
  position: relative;
  padding: .5rem;
  height: 82vw;
  margin: 0 auto;
  max-height: 25rem;
  max-width: 350px;
}

.tab-content.schedule>.tab-pane .btn {
  margin-bottom: .5rem;
  width: 9rem;
}
.tab-content.schedule>.active {
  display: flex;
  flex-direction: column;
}
@media (min-width: 576px) {
  .tab-content.schedule>.tab-pane .btn {
    width: 10rem;
  }
  .tab-content.schedule>.tab-pane {
    height: 50vw;
    width: 100%;
  }
}
@media (min-width: 768px) {
  .nav-pills .nav-link {
    /* padding-left: 1rem; */
  }
  .tab-content.schedule>.tab-pane {
    padding: .5rem;
    width: 25rem;
    height: 25rem;
  }
}
@media (min-width: 992px) {
  /* .tab-content.schedule>.tab-pane {
    height: 25rem;
    width: 350px;
  } */
}
.tab-content.schedule>.tab-pane iframe {
  margin: 0 auto;
  height: 95%;
  width: 95%;
}

.bg-white-op {
  background: rgba(255, 255, 255, .7);
}
nav {
  font-family: 'Noto Sans JP', sans-serif;
  font-weight: 300;
}
@media (min-width: 1200px) {
  .nav-item {
    margin-left: .5rem;
    margin-right: .5rem;
  }
}

.sns-icon {
  font-size: .5rem;
}

.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

.bg-image {
  background-image: url('../images/top-bg.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 200%;
  width: 100%;
  height: 80vw;
  max-height: 500px;
}

.height-25 {
  height: 22.5%;
}
.width-45 {
  width: 45%;
}
.height-15 {
  height: 2.5em;
}
@media (min-width: 415px) {
  /* .bg-image {
    height: 40vh;
  } */
}
@media (min-width: 576px) {
  .bg-image {
    background-size: cover;
    height: 65vw;
    max-height: 550px;
  }
  .height-25 {
    height: 25%;
  }
  .width-45 {
    width: 20vw;
  }
}
@media (min-width: 768px) {
  .width-45 {
  }
  .height-15 {
    height: 12.5%;
  }
}
@media (min-width: 992px) {
  .bg-image {
    height: 50vw;
    max-height: 650px;
  }
}
@media (min-width: 1200px) {
  .bg-image {
    height: 650px;
  }
  .width-45 {
    width: 20%;
  }
}
.header-sns-icons {
  margin-top: 5%;
  width: 32.5%;
}
.header-sns-icons .row {
  margin-left: 0;
  margin-right: 0;
}

.header-sns-icons a {
  padding-left: 3%;
  padding-right: 3%;
}
.p-title {
  font-size: .9rem;
}
@media (min-width: 576px) {
  .p-title {
    font-size: 1.4vw;
  }
  .header-sns-icons {
    margin-top: 2.5%;
    width: 20%;
  }
  .header-sns-icons .row {
    margin-left: -15px;
    margin-right: -15px;
  }
}
@media (min-width: 768px) {
  /* .p-title {
    font-size: .85rem;
  } */
}
@media (min-width: 992px) {
  .header-sns-icons {
    width: 16%;
  }
  .p-title {
    font-size: .85rem;
  }
}
@media (min-width: 1200px) {
  .p-title {
    font-size: 1rem;
  }
}

.staff-img {
  background-size: 140% auto;
  background-repeat: no-repeat;
  background-position: center 5%;
  height: 20vw;
  width: 100%;
}
/* ... */

